--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AdminRoleApplicableDetailsListViewModel
 @{
-    ViewBag.Title = "Admin Role List";
+    ViewBag.Title = "Allocate Role To User";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
@@ -15,7 +15,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Role Allocated To User's</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Allocate Role To User's</a>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/GetAssociateUnAssociateAdminRoleToUser?adminRoleMasterId=@Model.AdminRoleMasterId" role="button"><i class="fas fa-plus me-2"></i>Allocate Role To User</a>
                     </div>
                     <div class="card-header">
                         <div class="row">
@@ -23,13 +23,13 @@
                                 <label>Admin Role Code</label>
                             </div>
                             <div class="col-md-3">
-                                @Html.TextBoxFor(x => x.AdminRoleCode, new { @class = "form-control", @readonly = "true" })
+                                @Html.TextBoxFor(x => x.AdminRoleCode, new { @class = "form-control", @disabled = "disabled" })
                             </div>
                             <div class="col-md-2">
                                 <label>Role Description</label>
                             </div>
-                            <div class="col-md-3">
-                                @Html.TextBoxFor(x => x.SanctionPostName, new { @class = "form-control", @readonly = "true" })
+                            <div class="col-md-4">
+                                @Html.TextBoxFor(x => x.SanctionPostName, new { @class = "form-control", @disabled = "disabled" })
                             </div>
                         </div>
                     </div>
