--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_RoleAllocatedToUserList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_RoleAllocatedToUserList.cshtml
@@ -26,7 +26,7 @@
                             <td>@item.WorkFromDate</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/UpdateAdminRoleApplicableDetails?adminRoleApplicableDetailId=@item.AdminRoleApplicableDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                <a href="../@controllerName/GetAssociateUnAssociateAdminRoleToUser?adminRoleMasterId=@item.AdminRoleMasterId&adminRoleApplicableDetailId=@item.AdminRoleApplicableDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
                             </td>
                         </tr>
                     }
