--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/SaleInvoiceList.cshtml
@@ -17,7 +17,7 @@
                     <div class="card-header">
                         <div class="row">
                             <div class="col-md-1">
-                                <label>@AdminResources.LabelCentre</label>
+                                <label class = "form-control">@AdminResources.LabelCentre</label>
                             </div>
                             <div class="col-md-2">
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
