--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/CreateEdit.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = Model.HospitalDoctorId > 0 ? "Update Hospital Doctor" : "Add Hospital Doctor";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndBuildingByCentreCode()" };
-    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeListByCentreCodeAndDepartmentId()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetDepartmentAndBuildingByCentreCode()", IsDisabled = Model.HospitalDoctorId > 0 };
+    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "HospitalDoctors.GetEmployeeListByCentreCodeAndDepartmentId()", IsDisabled = Model.HospitalDoctorId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -68,36 +68,35 @@
                                    DropdownName = "OrganisationCentrewiseBuildingRoomId",
                                    DropdownSelectedValue = Model.OrganisationCentrewiseBuildingRoomId
                                     .ToString(),
-                                   Parameter = Model.SelectedCentreCode
+                                   Parameter = Convert.ToString(Model.OrganisationCentrewiseBuildingMasterId)
                                })
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingRoomId)
                                     </div>
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-lg-3">
-                                        <div class="md-3">
-
-                                            @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required" })
-                                            @if (Model.HospitalDoctorId > 0)
-                                            {
-                                                @Html.HiddenFor(x => x.EmployeeId)
-                                            }
-                                            else
-                                            {
+                                    @if (Model.HospitalDoctorId > 0)
+                                    {
+                                        @Html.HiddenFor(x => x.EmployeeId)
+                                    }
+                                    else
+                                    {
+                                        <div class="col-lg-3">
+                                            <div class="md-3">
+                                                @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required" })
                                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                    {
                                        DropdownType = DropdownTypeEnum.UnAssociatedEmployeeList.ToString(),
                                        DropdownName = "EmployeeId",
                                        DropdownSelectedValue = Model.EmployeeId
                                         .ToString(),
-                                       Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode)? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}" : ""
+                                       Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}" : ""
 
                                    })
                                                 @Html.ValidationMessageFor(x => x.EmployeeId)
-                                            }
+                                            </div>
                                         </div>
-                                    </div>
+                                    }
                                     <div class="col-lg-3">
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.MedicalSpecilizationEnumId, new { @class = "form-label required " })
