--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctors/_List.cshtml
@@ -26,7 +26,7 @@
                             <td>@item.MedicalSpecilization</td>
                             <td>@item.BuildingRoomName</td>
                             <td class="text-center">
-                                <a href="../@controllerName/GetHospitalDoctors?@* hospitalDoctorId=@item.HospitalDoctorId& *@employeeId=@item.EmployeeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?hospitalDoctorIds=@item.HospitalDoctorId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
