--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryProductDimensionGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryProductDimensionGroup/CreateEdit.cshtml
@@ -39,7 +39,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ProductDimensionGroupCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ProductDimensionGroupCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.ProductDimensionGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.ProductDimensionGroupCode)
                                     </div>
                                 </div>
@@ -63,94 +63,36 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody>
-                                                        <!-- Configuration -->
-                                                        <tr>
-                                                            <td class="col">Configuration</td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForPurchase, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForSale, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
-                                                            </td>
-                                                        </tr>
-                                                        <!-- Styling -->
-                                                        <tr>
-                                                            <td class="col">Styling</td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForPurchase, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForSale, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
-                                                            </td>
-                                                        </tr>
-                                                        <!-- Color -->
-                                                        <tr>
-                                                            <td class="col">Color</td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForPurchase, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForSale, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
-                                                            </td>
-                                                        </tr>
-                                                        <!-- Size -->
-                                                        <tr>
-                                                            <td class="col">Size</td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForPurchase, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.ForSale, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                <div class="form-check">
-                                                                    @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                                                </div>
-                                                            </td>
-                                                            <td class="col-auto">
-                                                                @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control" })
-                                                            </td>
-                                                        </tr>
+                                                        @if (Model?.InventoryProductDimensionGroupMapperList?.Count > 0)
+                                                        {
+                                                            @foreach (InventoryProductDimensionGroupMapperModel item in Model.InventoryProductDimensionGroupMapperList)
+                                                            {
+                                                                <tr id="row_@item.InventoryProductDimensionId">
+                                                                    <td class="col">
+                                                                        <input id="InventoryProductDimensionId_@item.InventoryProductDimensionId" type="hidden">
+                                                                        @item.ProductDimensionName
+                                                                    </td>
+                                                                    <td class="col-auto">
+                                                                        <div class="form-check">
+                                                                            <input class="form-check-input" id="ForPurchase_@item.InventoryProductDimensionId" type="checkbox">
+                                                                        </div>
+                                                                    </td>
+                                                                    <td class="col-auto">
+                                                                        <div class="form-check">
+                                                                            <input class="form-check-input" id="ForSale_@item.InventoryProductDimensionId" type="checkbox">
+                                                                        </div>
+                                                                    </td>
+                                                                    <td class="col-auto">
+                                                                        <div class="form-check">
+                                                                            <input class="form-check-input" id="IsActive_@item.InventoryProductDimensionId" type="checkbox">
+                                                                        </div>
+                                                                    </td>
+                                                                    <td class="col-auto">
+                                                                        <input class="form-control" id="DisplayOrder_@item.InventoryProductDimensionId" type="text">
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        }
                                                     </tbody>
                                                 </table>
                                             </div>
