--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -7,24 +7,25 @@
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
                 <a class="nav-link" href="/OrganisationCentreMaster/Edit?organisationCentreId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Centre Details</h5>
+                    <i class="ti-menu"></i> 
+                    <h5 class="m-0 ps-2">Centre Details</h5>
+                   
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/PrintingFormat?organisationCentreId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Centre Printing Format</h5>
+                    <i class="fa fa-print"></i>
+                    <h5 class="m-0 ps-2">Centre Printing Format</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseGSTSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Centre GST Setup</h5>
+                    <i class="fa fa-rupee"></i>
+                    <h5 class="m-0 ps-2">Centre GST Setup</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseSMTPSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Centre SMTP Setup</h5>
+                    <i class="fa fa-gears"></i>
+                    <h5 class="m-0 ps-2">Centre SMTP Setup</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="ti-control-record"></i>
-                    <h5 class="m-0">Centre Email Template</h5>
+                    <i class="fas fa-envelope"></i>
+                    <h5 class="m-0 ps-2">Centre Email Template</h5>
                 </a>
             </div>
         </div>
