--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -16,11 +16,11 @@
                     <h5 class="m-0 ps-2">Centre Printing Format</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseGSTSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="fa fa-rupee"></i>
+                    <i class="fas fa-rupee-sign"></i>
                     <h5 class="m-0 ps-2">Centre GST Setup</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseSMTPSetup?organisationCentreId=@Model" aria-selected="true">
-                    <i class="fa fa-gears"></i>
+                    <i class="fa fa-envelope-square"></i>
                     <h5 class="m-0 ps-2">Centre SMTP Setup</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
