--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/ListEmployeeService.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/ListEmployeeService.cshtml
@@ -3,21 +3,26 @@
     ViewBag.Title = "Employee Service List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
+    keyValuePairs.Add("EmployeeId", Model.EntityId.ToString());
+    keyValuePairs.Add("PersonId", Model.PersonId.ToString());
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div class="col-lg-2">
+                @Html.Partial("~/Views/EmployeeMaster/_EmployeeDetailsSidePannel.cshtml", keyValuePairs)
+            </div>
+            <div class="col-10">
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Employee Service List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateEmployee" role="button"><i class="fas fa-plus me-2"></i>Add Employee</a>
-                        
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/GetEmployeeService" role="button"><i class="fas fa-plus me-2"></i>Add Employee Service</a>
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            @Html.Partial("~/Views/EmployeeMaster/_EmployeeService.cshtml", Model)
+                            @Html.Partial("~/Views/EmployeeMaster/_ListEmployeeService.cshtml", Model)
                         </div>
                     </div>
                 </div>
