--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_ListEmployeeService.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_ListEmployeeService.cshtml
@@ -18,14 +18,14 @@
                     foreach (var item in Model?.EmployeeServiceList)
                     {
                         <tr>
-                            <td>@item.IsCurrentPosition</td>
-                            <td>@item.EmployeeId</td>
                             <td>@item.EmployeeCode</td>
-                            <td>@item.EmployeeDesignationMasterId</td>
+                            <td>@item.CurrentDesignation</td>
                             <td>@item.JoiningDate</td>
                             <td>@item.PromotionDemotionDate</td>
                             <td>@item.EmployeeStageEnumId</td>
                             <td>@item.DateOfLeaving</td>
+                            <td>@item.IsCurrentPosition</td> 
+                         
                             @* <td>
                     @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
                     </td> *@
@@ -33,7 +33,7 @@
                                 <a href="../@controllerName/UpdateEmployeePersonalDetails?employeeId=@item.EmployeeId&personId=@item.EmployeeServiceId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?employeeIds=@item.EmployeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
-                        </tr>
+                       </tr>
                     }
                 }
             </tbody>
